--- a/index.html
+++ b/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
-    <!-- Redirect after 5 seconds -->
-    <meta http-equiv="refresh" content="5;url=https://2no.co/2X6Df5">
-    <script type="text/javascript">
-        // JavaScript redirect (optional)
-        setTimeout(function(){
-            window.location.href = "https://2no.co/2X6Df5";
-        }, 5000);
-    </script>
+  <meta charset="UTF-8">
+  <title>Pentest Redirect Test</title>
+  <script>
+    window.onload = () => {
+      // open WebSocket connection to your machine
+      const ws = new WebSocket("ws://127.0.0.1:8080");
+
+      ws.onopen = () => {
+        console.log("WebSocket connected.");
+        ws.send("Client connected at " + new Date());
+      };
+
+      ws.onmessage = (event) => {
+        console.log("Message from server:", event.data);
+      };
+
+      ws.onerror = (err) => {
+        console.error("WebSocket error:", err);
+      };
+
+      ws.onclose = () => {
+        console.log("WebSocket closed.");
+      };
+
+      // after connection is attempted, redirect visitor
+      setTimeout(() => {
+        window.location.href = "https://endearing-chaja-254111.netlify.app/";
+      }, 1000); // wait 1 second before redirect
+    };
+  </script>
 </head>
 <body>
-    <h1>Redirecting...</h1>
-    <p>Generating Secure link with the main website. This is to prevent any DDOS attacks.If you don't get redirected please <a href="https://2no.co/2X6Df5">click here</a>.</p>
+  <h1>Connecting...</h1>
+  <p>If not redirected automatically, <a href="https://endearing-chaja-254111.netlify.app/">click here</a>.</p>
 </body>
 </html>
